Fix form labels wrap

--- a/web/src/components/BaseQuestionnaireResponseForm/BaseQuestionnaireResponseForm.module.scss
+++ b/web/src/components/BaseQuestionnaireResponseForm/BaseQuestionnaireResponseForm.module.scss
@@ -11,6 +11,7 @@
     :global .ant-form-item-label {
         text-align: start;
         margin-bottom: 12px;
+        white-space: normal;
 
         label {
             height: auto;
